desktop-java: package v1.0.0 as a real Windows installer
Bumps to 1.0.0 and adds a jpackage-based packaging path, verified
live end-to-end: built, installed (Start Menu + desktop shortcut,
registered in Add/Remove Programs), and the installed app launches
correctly from C:\Program Files\MultiAgent\MultiAgent.exe.

- New Launcher.java: App extends javafx.application.Application, and
  the JVM refuses to start an Application subclass directly as the
  main class unless JavaFX is on the module path - never true for a
  plain classpath app built from jpackage's input-directory mode
  (confirmed live: "JavaFX runtime components are missing"). Launcher
  is a plain main(String[]) that just calls App.main(args); mvn
  javafx:run's dev loop is unaffected and still points at App
  directly, since that plugin sets up the module path itself.
- pom.xml: javafx-controls/fxml/graphics/base pinned to the "win"
  classifier explicitly on all four (Maven doesn't propagate a
  classifier through transitive resolution - each -win module's own
  POM pulls its next-lower module without one), each excluding that
  classifier-less transitive copy so exactly one variant of each
  module lands in the packaging input. maven-jar-plugin now builds
  straight into target/jpackage-input/ (Launcher as Main-Class);
  maven-dependency-plugin copies every runtime dependency jar there
  too; maven-resources-plugin copies a real personas/ directory as a
  sibling of the jar (PersonaRegistry's packaged-path lookup is
  filesystem-based, not a classpath resource read).
- jpackage itself runs directly (not via a Maven plugin) - see
  ARCHITECTURE.md §8/README.md for the exact command. Needs WiX
  Toolset v3-v5 on PATH for --type exe/msi; v6+ gates builds behind a
  paid "Open Source Maintenance Fee" EULA introduced after v5, so v5
  is what's documented and what this was verified against.

154/154 tests still passing; mvn javafx:run confirmed unaffected by
the classifier changes.

Co-Authored-By: Claude 